# trackgen

./: README.md  pyproject.toml  quick_run.sh  requirements.txt  trackgen.py
examples/: 8.umdt  all_commands.umdt
umdt/: geometry.py  parse.py  state.py  umdt.py  visualize.py
